--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/inter": "^4.5.14",
     "@fontsource/lora": "^4.5.12",
+    "airtable": "^0.11.5",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.5",
