--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
+    "build-and-start": "next build && next start -p 3001",
     "start": "next start",
     "lint": "next lint"
   },
